# noodles

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py
3rd-parties/: CMakeLists.txt
bench/: CMakeLists.txt  noodles_bench.cpp
src/: CMakeLists.txt  naive.cpp  noodles.cpp  semaphore.cpp
src/include/noodles/: naive.hpp  noodles.hpp  semaphore.hpp
test/: CMakeLists.txt  noodles_unittest.cpp
